# decent-studio

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
examples/: seed.rs
src/: export.rs  lib.rs  main.rs  settings.rs  theme.rs
src/app/: erd.rs  mod.rs  style.rs  views.rs
src/convert/: mod.rs  typemap.rs
src/db/: mod.rs  schema.rs  value.rs
tests/: conversion.rs
